updated the simple orchestrator to support aws tasks creation, included the libs in distributions, and updated the participant with tasks